<resources>
	<string name="default_notification_channel_id" translatable="false">default_notification</string>
	<string name="default_notification_channel_name" translatable="false">Default</string>
	<string name="alert_notification_group_id" translatable="false">alert_group</string>
	<string name="alert_notification_group_name" translatable="false">Alert</string>
	<string name="detect_notification_channel_id" translatable="false">detect_notification</string>
	<string name="detect_notification_channel_name" translatable="false">Child Detection</string>
	<string name="title_activity_main" translatable="false">iVan</string>
	<string name="title_student_information">Student Information</string>
	<string name="title_driver_information">Driver Information</string>
	<string name="title_parent_information">Parent Information</string>
	<string name="title_map">Map</string>

	<string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
	<string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

	<string name="action_settings">Settings</string>
	<string name="action_close">Close</string>
	<string name="action_cancel">Cancel</string>
	<string name="action_report">Report</string>
	<string name="action_open_map">Open Map</string>
	<string name="action_detail">Detail</string>
	<string name="action_confirm_student_secured">Confirm Student Secured</string>
	<string name="action_confirm">Confirm</string>

	<string name="select_car">Select Car</string>
	<string name="sign_in">Sign In</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="car_tracking">Car Tracking</string>
	<string name="student_list">Student List</string>
	<string name="home_location">Home Location</string>
	<string name="driver">Driver</string>
	<string name="teacher">Teacher</string>
	<string name="phone">Phone</string>
	<string name="parent">Parent</string>
	<string name="profile">Profile</string>
	<string name="live">Live Streaming</string>
	<string name="notification">Notification</string>
	<string name="alarm_status">Alarm Status</string>
	<string name="data">Data</string>
	<string name="complete" translatable="false">Complete</string>
	<string name="language">Language</string>
	<string name="car_history">Car History</string>

	<string name="condition">Condition</string>
	<string name="last_update">Last Update</string>
	<string name="current_speed">Current Speed</string>
	<string name="current_speed_value">%1$.2f Km/hr</string>
	<string name="fuel_level">Fuel Level</string>
	<string name="percent_value" translatable="false">%1$.2f %%</string>
	<string name="distance_value">%1$.2f km.</string>
	<string name="estimate_value">%1d min</string>
	<string name="alarm_status_detection">Detection: %s</string>
	<string name="alarm_status_row">Row: %d</string>
	<string name="name_and_role" translatable="false">%1$s (%2$s)</string>
	<string name="student_id" translatable="false">(ID: %1$s)</string>
	<string name="brake_oil_mileage">Brake Oil Mileage</string>
	<string name="engine_oil_mileage">Engine Oil Mileage</string>
	<string name="mileage">Mileage</string>
	<string name="speed_exceed">Speed Exceed Count</string>
	<string name="pickup_value">Pick up: %s</string>
	<string name="getoff_value">Get Off: %s</string>
	<string name="come">Come</string>

	<string name="msg_no_sms" translatable="false">Your device does not have the ability to send SMS.</string>
	<string name="msg_no_phone" translatable="false">Your device does not have the ability to make a phone call.</string>
	<string name="msg_no_email" translatable="false">Your device does not have the ability to send email.</string>

	<string name="server_key" translatable="false">AIzaSyA6kKThlimCYp3zUDeb99R0-inhVwxTmLE</string>
	<string name="logout">Logout</string>
	<string name="my_children">My Children</string>
	<string name="car_staff">Car Staff</string>
	<string name="report_false_alarm">Report false alarm</string>
	<string name="report_false_alarm_question">Do you want to report false alarm ?</string>
	<string name="confirm_secured_question">Do you want to confirm student secured ?</string>
	<string name="no_location">No location</string>
	<string name="not_in_range">Not in range</string>

	<string name="msg_waiting_current_location" translatable="false">Detecting current location…</string>
	<string name="confirm_hint">* Press this button when you reach the scene</string>
</resources>
