<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@android:color/white"
	android:padding="@dimen/space_large">

	<android.support.constraint.Group
		android:id="@+id/alarmStatusGroup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:constraint_referenced_ids="titleTextView,detection,dataTextView,recyclerView" />

	<TextView
		android:id="@+id/falseAlarmView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="@color/red200"
		android:fontFamily="@font/kanit_bold"
		android:padding="@dimen/space_larger"
		android:text="FALSE ALARM"
		android:textAlignment="center"
		android:textColor="@android:color/white"
		android:textSize="@dimen/text_large_4"
		android:visibility="gone"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:visibility="visible" />

	<TextView
		android:id="@+id/titleTextView"
		style="@style/Title1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/space_normal"
		android:text="@string/alarm_status"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/falseAlarmView" />

	<TextView
		android:id="@+id/detection"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/space_normal"
		android:background="@color/red200"
		android:fontFamily="@font/kanit"
		android:padding="@dimen/space_normal"
		android:textColor="@android:color/white"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/titleTextView"
		tools:text="Detection: Detect" />

	<TextView
		android:id="@+id/dataTextView"
		style="@style/Title1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/space_normal"
		android:text="@string/data"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/detection" />

	<android.support.v7.widget.RecyclerView
		android:id="@+id/recyclerView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/space_normal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/dataTextView" />

	<Button
		android:id="@+id/reportFalseButton"
		style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/space_normal"
		android:text="@string/report_false_alarm"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

	<Button
		android:id="@+id/confirmSecureButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/action_confirm_student_secured"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/reportFalseButton" />

</android.support.constraint.ConstraintLayout>