<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="300dp"
	android:layout_height="wrap_content"
	android:background="@android:color/white"
	android:elevation="@dimen/elevation_top">

	<TextView
		android:id="@+id/titleTextView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/space_larger"
		android:layout_marginRight="@dimen/space_larger"
		android:layout_marginTop="@dimen/space_larger"
		android:textColor="@color/textColor"
		android:textSize="@dimen/text_large_2"
		android:textStyle="bold"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:text="Use Google's location service?"
		tools:visibility="visible" />

	<TextView
		android:id="@+id/text1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/space_larger"
		android:layout_marginRight="@dimen/space_larger"
		android:layout_marginTop="20dp"
		android:textColor="@color/textColorPrimary"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/titleTextView"
		tools:text="Cupcake ipsum dolor sit amet. Cake tootsie roll carrot cake gummies." />

	<ImageView
		android:id="@+id/staticMapView"
		android:layout_width="0dp"
		android:layout_height="120dp"
		android:layout_marginLeft="@dimen/space_larger"
		android:layout_marginRight="@dimen/space_larger"
		android:layout_marginTop="@dimen/space_large"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text1"
		tools:src="@color/colorAccent" />

	<Button
		android:id="@+id/negativeButton"
		style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/action_close"
		android:textAllCaps="true"
		app:layout_constraintBottom_toBottomOf="@+id/openMapButton"
		app:layout_constraintRight_toLeftOf="@+id/openMapButton" />

	<Button
		android:id="@+id/openMapButton"
		style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/space_larger"
		android:text="@string/action_open_map"
		android:textAllCaps="true"
		app:layout_constraintTop_toBottomOf="@+id/staticMapView"
		app:layout_constraintRight_toLeftOf="@+id/detailButton" />

	<Button
		android:id="@+id/detailButton"
		style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/space_larger"
		android:text="@string/action_detail"
		android:textAllCaps="true"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/staticMapView" />

</android.support.constraint.ConstraintLayout>
